Scala code samples; Miscellaneous updates