@@ -38,4 +38,42 @@ imported. This can lead to new compilation errors in code that previously used t
 4) Modern IDEs have accelerators, code elision and and other features that help you keep your imports under control if
 you use explicit imports.
 */
+//------------------------
 
+/*
+Java 9 notes - 
+"The Big Kill Switch" to turn off encapsulation --illegal-access  
+
+jlink: The java linker (JEP 282)
+jlink --modulepath $JDKMODS --addmods java.base --output myimage
+
+OSGI supports versioning
+Implications of jlink - write once, run (test) everywhere
+
+CMS garbage collector getting deprecated in java 9. 
+
+can plit heap b/w non-volatile RAM and volatile RAM
+
+Epsilon GC is a NULL GC. Useful for testing garbage collection. 
+
+Project Valhalla - value types in Java. Identity leads to pointers -> indirection -> suffering of performance
+Java has primitives for performance; Objects for encapsulation, polymorphism, inheritance, OO
+
+ArrayList<int> wont work. ArrayList<Integer> requires boxing and unboxing.
+Value types codes like a class, works like a primitive.
+- can have methods and fields
+- can implement interfaces
+
+Project Panama - interconnecting JVM and native code.
+
+Project Loom - concurrent programming made simpler. 1M threads in JVM needs vv powerful super computer.
+OS thread is not light weight enough.
+Have something called fibers, threads at JVM level instead of OS level. 
+Has close to zero overhead for task switching. This is recreating green threads.
+Use the ForkJoinPool scheduler
+
+Project metropolis - rewrite most of the JVM in java. Use the Graal compiler project as significant input.
+
+Can have both classpath and modulepath. 
+Moving away from distinction between JDK and JRE. Idea is to now move to Jlink. There is no such thing as JRE any more. 
+*/
